[gd_scene load_steps=5 format=2]

[ext_resource path="res://Scripts/boss/Byte.gd" type="Script" id=1]
[ext_resource path="res://Sprites/chrs/base_head.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 18.0078, 18 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 18.3433, 18.3964 )

[node name="Byte" type="KinematicBody2D"]
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 2 )

[node name="hurtTimer" type="Timer" parent="."]
process_mode = 0
wait_time = 0.1
one_shot = true
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="timeout" from="hurtTimer" to="." method="_on_hurtTimer_timeout"]
